[package]
name = "rust-programming-language-report"
version = "0.1.0"
authors = ["benedikt <benedikt.spies@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
lazy_static = "1.3.0"
#threadpool = "1.0"

[[bin]]
name = "stack"
path = "src/stack/main.rs"

[[bin]]
name = "tree"
path = "src/tree/main.rs"

[[bin]]
name = "parking"
path = "src/parking/main.rs"

[[bin]]
name = "playground"
path = "src/playground/main.rs"
