[package]
name = "rust-programming-language-report"
version = "0.1.0"
authors = ["benedikt <benedikt.spies@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
lazy_static = "1.3.0"
#threadpool = "1.0"

[[bin]]
name = "channels"
path = "src/channels.rs"

[[bin]]
name = "hashing"
path = "src/hashing.rs"

[[bin]]
name = "higherorderfunctions"
path = "src/higherorderfunction.rs"

[[bin]]
name = "mutex"
path = "src/mutex.rs"

[[bin]]
name = "parking"
path = "src/parking.rs"

[[bin]]
name = "playground"
path = "src/playground.rs"

[[bin]]
name = "shape"
path = "src/shape.rs"

[[bin]]
name = "stack"
path = "src/stack.rs"

[[bin]]
name = "thread"
path = "src/thread.rs"

[[bin]]
name = "tree"
path = "src/tree.rs"

[[bin]]
name = "vector"
path = "src/vector.rs"






